Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48450

QOpenGLWidget::grabFramebuffer does not work if multisampling is enabled

XMLWordPrintable

    • bc6d32686cbec7e225999f19ba5fb149507c8dec, e82e075e51db598c5a6fe4da399c2b1966a36110

      In qopenglframebufferobject.cpp function qt_gl_read_framebuffer_rgba8() uses:

      funcs->glReadPixels(0, 0, w, h, GL_BGRA, GL_UNSIGNED_INT_8_8_8_8_REV, img.bits());
      

      which fails with error 1282 (INVALID_OPERATION).

      This probably happens because:

      GL_INVALID_OPERATION is generated if GL_READ_FRAMEBUFFER_BINDING is non-zero, the read framebuffer is complete, and the value of GL_SAMPLE_BUFFERS for the read framebuffer is greater than zero.
      

        1. qtbug48450_fixed.zip
          1 kB
          Laszlo Agocs
        2. qtbug48450.tar.gz
          0.7 kB
          Joni Poikelin
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes